--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,51 @@
+default_language_version:
+  python: python3
 repos:
-- repo: https://github.com/ambv/black
-  rev: 18.9b0
-  hooks:
-  - id: black
-    language_version: python3.6
-    exclude: doc/source
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.1.0
-  hooks:
-  - id: trailing-whitespace
-    exclude: doc/source/
-  - id: end-of-file-fixer
-    exclude: doc/source/
-  - id: flake8
-    exclude: doc/source/
-    language_version: python3.6
-- repo: https://github.com/asottile/pyupgrade
-  rev: v1.12.0
-  hooks:
-  - id: pyupgrade
-    exclude: doc/source/
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v4.3.4
-  hooks:
-  - id: isort
+  - repo: https://github.com/humitos/mirrors-autoflake.git
+    rev: v1.3
+    hooks:
+      - id: autoflake
+        args:
+          [
+            "--in-place",
+            "--remove-all-unused-imports",
+            "--remove-unused-variable",
+            "--exclude=__init__.py",
+            "--remove-duplicate-keys",
+          ]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.0.1
+    hooks:
+      - id: trailing-whitespace
+        exclude: /README\.rst$|\.pot?$
+      - id: end-of-file-fixer
+        exclude: /README\.rst$|\.pot?$
+      - id: debug-statements
+      - id: fix-encoding-pragma
+        args: ["--remove"]
+      - id: check-case-conflict
+      - id: check-merge-conflict
+        exclude: /README\.rst$|^docs/.*\.rst$
+      - id: check-xml
+      - id: mixed-line-ending
+        args: ["--fix=lf"]
+  - repo: https://github.com/psf/black
+    rev: 21.9b0
+    hooks:
+      - id: black
+        args: ["--line-length=120", "--exclude=__init__.py"]
+        exclude: ^(__init__.py)
+  - repo: https://github.com/pycqa/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        name: flake8 except __init__.py
+        args: ["--max-line-length=120", "--exclude=__init__.py"]
+        exclude: ^(__init__.py)
+        additional_dependencies: ["flake8-bugbear==21.9.2"]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.29.0
+    hooks:
+      - id: pyupgrade
+        args: ["--keep-percent-format"]
+        exclude: ^(__init__.py)
